WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36739
Correct name of windows int64_t compile time assert
https://bugs.webkit.org/show_bug.cgi?id=36739
Summary
Correct name of windows int64_t compile time assert
Patrick R. Gansterer
Reported
2010-03-28 23:18:37 PDT
see patch
Attachments
The patch
(1.24 KB, patch)
2010-03-28 23:19 PDT
,
Patrick R. Gansterer
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Patrick R. Gansterer
Comment 1
2010-03-28 23:19:20 PDT
Created
attachment 51878
[details]
The patch
WebKit Commit Bot
Comment 2
2010-03-29 10:32:00 PDT
Comment on
attachment 51878
[details]
The patch Clearing flags on attachment: 51878 Committed
r56729
: <
http://trac.webkit.org/changeset/56729
>
WebKit Commit Bot
Comment 3
2010-03-29 10:32:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug