2010-03-29  Patrick Gansterer  <paroga@paroga.com>

Reviewed by Darin Adler.

        Corrected name of (u)int64_t compile time assert.
        https://bugs.webkit.org/show_bug.cgi?id=36739

        int64_t_is_four_bytes -> int64_t_is_eight_bytes

        * os-win32/stdint.h:

Canonical link: https://commits.webkit.org/48023@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56729 268f45cc-cd09-0410-ab3c-d52691b4dbfc